Fix gap between buttons and bottom of navigation below 600px

--- a/source/assets/stylus/_navigation.styl
+++ b/source/assets/stylus/_navigation.styl
@@ -80,13 +80,12 @@
 						padding 42px 0 0 75px
 
 /* Black string balloon logo for active home navigation link */
-.home .site-navigation .home-link a,
-.launch .site-navigation .home-link a
+.home .site-navigation .home-link a
 	background-color black-thirty
 	background-position 14px -76px
 	border-bottom none
 	color white
-	padding 40px 0 0 75px
+	padding 42px 0 0 75px
 
 	&:hover, &:active, &:focus
 		background-position 14px -76px
